Added nav scrolls

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,4 +1,4 @@
-<section class="py-32 bg-fuchsia">
+<section class="py-32 bg-fuchsia" id="about">
 	<div class="mx-auto sm:container">
 		<h1 class="text-primary font-heading text-5xl inline-block mb-10">
 			Interior design <span class="font-body text-xl block text-right mt-2 font-regular">for tha daring</span>
