--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,4 +1,4 @@
-<section class="py-32 bg-primary">
+<section class="py-32 bg-primary" id="contact">
 	<div class="mx-auto sm:container">
 		<div class="text-center">
 			<h2 class="text-white font-heading text-3xl inline-block mb-10">
