--- a/src/components/Info.astro
+++ b/src/components/Info.astro
@@ -1,4 +1,4 @@
-<section class="py-32 bg-fuchsia">
+<section class="py-32 bg-fuchsia" id="info">
 	<div class="mx-auto sm:container">
 		<div class="flex">
 			<div class="w-1/4">
