Updates van Oscar doorgevoerd

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,7 +1,7 @@
-<section class="py-32 bg-fuchsia" id="about">
+<section class="py-32 bg-fuchsia bg-cover" id="about" style="background-image: url('/grote parel.png')" >
 	<div class="mx-auto sm:container">
 		<h1 class="text-primary font-heading text-5xl inline-block mb-10">
-			Interior design <span class="font-body text-xl block text-right mt-2 font-regular">for tha daring</span>
+			Interior design <span class="font-body text-xl block text-right mt-2 font-regular">for the daring</span>
 		</h1>
 		<p class="w-1/2  leading-7">
 			Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ipsam quas,
@@ -15,10 +15,14 @@
 	</div>
 </section>
 
-<section style="background-image: url(/tafereel.jpg);" class="py-32 bg-cover bg-center min-h-[60vh]">
+<section style="background-image: url(/spacejoy.jpg);" class="py-32 bg-cover bg-center min-h-[60vh]">
 	
-	<div class="text-white bg-primary-light ml-[66%] inline-block w-1/4 p-16 rounded-3xl ">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque dolorem dolores enim ex exercitationem hic 
-		iusto magnam nam, officia sed! Aliquam at debitis deserunt ducimus nesciunt possimus quaerat soluta voluptates.	
+	<div class="ml-[60%] inline-flex justify-center items-center w-1/4 relative">
+		
+		<p class="text-white z-10 absolute p-16 px-24">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque dolorem dolores enim ex exercitationem hic
+			iusto magnam nam, officia sed! Aliquam at debitis deserunt ducimus nesciunt possimus.
+		</p>
+		<img src="/blob.png" alt="blob" class="relative inset-0 z-0"/>
 	</div>
 </section>
