--- a/src/components/Info.astro
+++ b/src/components/Info.astro
@@ -1,8 +1,8 @@
-<section class="py-32 bg-fuchsia" id="info">
+<section class="py-32 bg-fuchsia-dark text-white" id="process">
 	<div class="mx-auto sm:container">
 		<div class="flex">
 			<div class="w-1/4">
-				<h2 class="text-primary font-heading text-3xl inline-block mb-10">
+				<h2 class="text-primary font-heading text-3xl inline-block mb-10 text-white">
 					FAQ
 				</h2>
 			</div>
