--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,13 +1,14 @@
 <nav class="bg-primary text-white">
-	<ul class="flex justify-evenly items-center py-24">
+	<ul class="flex justify-evenly items-center py-12">
 		<li><a href="#projects">Projects</a></li>
 		<li><a href="#about">About us</a></li>
 		<li>
-			<a href="/">
-				<img src="/logo-wit.png" class="w-32 block" />
+			<a href="/" class="flex items-center justify-center relative">
+				<img src="/logo-groen.png" class="w-28 block "/>
+				<img src="/glow.png" class="min-w-[450px] absolute opacity-50 -translate-y-5"/>
 			</a>
 		</li>
-		<li><a href="#info">Info us</a></li>
+		<li><a href="#process">Process</a></li>
 		<li><a href="#contact">Contact</a></li>
 	</ul>
 </nav>
