--- a/src/components/Project-slider.astro
+++ b/src/components/Project-slider.astro
@@ -1,18 +1,24 @@
 ﻿---
+import { getCollection } from 'astro:content';
 interface Project {
     id: number;
     title:string;
     image: string;
+    slug: string;
 }
-const projects: Project[] = [
-    {
-        id: 1,
-        image: "project1.jpg",
-        title: "My Project 1",
-    }
-];
+// const projects: Project[] = [
+//     {
+//         id: 1,
+//         image: "project1.jpg",
+//         title: "My Project 1",
+//     }
+// ];
+
+const projects = await Astro.glob('../pages/projects/*.md') as Project[];
+
 ---
 <div>
+    {projects.map((project) => (<div>{project.title}</div>))}
     {projects.map((project) => {
         const image = "background-image: url(" + project.image + ")";
         
