--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -3,7 +3,7 @@
 		<h1 class="text-primary font-heading text-5xl inline-block mb-10">
 			Interior design <span class="font-body text-xl block text-right mt-2 font-regular">for the daring</span>
 		</h1>
-		<p class="w-1/2  leading-7">
+		<p class="w-1/2 text-primary leading-7">
 			Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ipsam quas,
 			aspernatur nulla quae blanditiis amet, sed suscipit ratione voluptatibus
 			perspiciatis pariatur. Minus ab nostrum officiis consectetur nisi officia
@@ -16,7 +16,6 @@
 </section>
 
 <section style="background-image: url(/spacejoy.jpg);" class="py-32 bg-cover bg-center min-h-[60vh]">
-	
 	<div class="ml-[60%] inline-flex justify-center items-center w-1/4 relative">
 		
 		<p class="text-white z-10 absolute p-16 px-24">
