--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,9 +1,9 @@
 <section class="py-32 bg-fuchsia bg-cover" id="about" style="background-image: url('/grote parel.png')" >
-	<div class="mx-auto sm:container">
+	<div class="mx-auto container">
 		<h1 class="text-primary font-heading text-5xl inline-block mb-10">
-			Interior design <span class="font-body text-xl block text-right mt-2 font-regular">for the daring</span>
+			Interior design <span class="font-body text-xl block text-right mt-5 sm:mt-2 font-regular">for the daring</span>
 		</h1>
-		<p class="w-1/2 text-primary leading-7">
+		<p class="w-full sm:w-1/2 text-primary leading-7">
 			Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ipsam quas,
 			aspernatur nulla quae blanditiis amet, sed suscipit ratione voluptatibus
 			perspiciatis pariatur. Minus ab nostrum officiis consectetur nisi officia
@@ -16,7 +16,7 @@
 </section>
 
 <section style="background-image: url(/spacejoy.jpg);" class="py-32 bg-cover bg-center min-h-[60vh]">
-	<div class="ml-[60%] inline-flex justify-center items-center w-1/4 relative">
+	<div class="sm:w-2/3 sm:ml-[10%] lg:ml-[60%] lg:w-1/4 inline-flex justify-center items-center relative">
 		
 		<p class="text-white z-10 absolute p-16 px-24">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque dolorem dolores enim ex exercitationem hic
