--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,12 +1,12 @@
 <section class="py-32 bg-primary" id="contact">
-	<div class="mx-auto sm:container">
+	<div class="mx-auto container">
 		<div class="text-center">
 			<h2 class="text-white font-heading text-3xl inline-block mb-10">
 				Contact
 			</h2>
 		</div>
-		<div class="flex">
-			<div class="w-1/2 pr-32">
+		<div class="flex flex-col sm:flex-row">
+			<div class="w-full sm:w-1/2 lg:pr-32">
 				<p class="text-white mb-8 mt-8">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus architecto asperiores aspernatur corporis delectus earum esse eum.  A accusamus architecto asperiores aspernatur corporis delectus earum esse eum.
 				</p>
@@ -28,8 +28,8 @@
 					</li>
 				</ul>
 			</div>
-			<div class="w-1/2">
-				<form class="pl-24">
+			<div class="w-full sm:w-1/2 mt-10 sm:mt-0">
+				<form class="lg:pl-24">
 					<div class="flex space-x-6">
 						<div class="w-1/2">
 							<label for="firstname" class="block text-white mb-1">Name</label>
