--- a/src/components/Info.astro
+++ b/src/components/Info.astro
@@ -1,12 +1,12 @@
 <section class="py-32 bg-fuchsia-dark text-white" id="process">
-	<div class="mx-auto sm:container">
-		<div class="flex">
-			<div class="w-1/4">
+	<div class="mx-auto container">
+		<div class="flex flex-col sm:flex-row">
+			<div class="sm:w-1/4">
 				<h2 class="text-primary font-heading text-3xl inline-block mb-10 text-white">
 					FAQ
 				</h2>
 			</div>
-			<div class="w-3/4 ">
+			<div class="sm:w-3/4 ">
 				<ul>
 					<li class="mb-10">
 						<div class="mb-3 font-semibold">Lorem ipsum dolor sit amet?</div>
