--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,11 +1,11 @@
 <nav class="bg-primary text-white">
-	<ul class="flex justify-evenly items-center py-12">
+	<ul class="flex justify-evenly items-center py-8 sm:py-12">
 		<li><a href="#projects">Projects</a></li>
 		<li><a href="#about">About us</a></li>
 		<li>
 			<a href="/" class="flex items-center justify-center relative">
-				<img src="/logo-groen.png" class="w-28 block "/>
-				<img src="/glow.png" class="min-w-[450px] absolute opacity-50 -translate-y-5"/>
+				<img src="/logo-groen.png" class="w-12 sm:w-28 block "/>
+				<img src="/glow.png" class="sm:min-w-[450px] absolute opacity-50 -translate-y-5"/>
 			</a>
 		</li>
 		<li><a href="#process">Process</a></li>
