--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Nav from "../components/Nav.astro";
 import About from "../components/About.astro";
 import Info from "../components/Info.astro";
 import Contact from "../components/Contact.astro";
-import ProjectSlider from "../components/Project-slider.astro";
+import Projects from "../components/Projects.vue";
 ---
 
 <Layout title="Welcome to Opulent">
@@ -12,7 +12,7 @@ import ProjectSlider from "../components/Project-slider.astro";
         <Nav />
     </header>
 	<main>
-		<ProjectSlider />
+		<Projects client:visible />
         <About />
         <Info />
         <Contact />
