--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -4,24 +4,11 @@
 			Interior design <span class="font-body text-xl block text-right mt-5 sm:mt-2 font-regular">for the daring</span>
 		</h1>
 		<p class="w-full sm:w-1/2 text-primary leading-7">
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ipsam quas,
-			aspernatur nulla quae blanditiis amet, sed suscipit ratione voluptatibus
-			perspiciatis pariatur. Minus ab nostrum officiis consectetur nisi officia
-			explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-			ipsam quas, aspernatur nulla quae blanditiis amet, sed suscipit ratione
-			voluptatibus perspiciatis pariatur. Minus ab nostrum officiis consectetur
-			nisi officia explicabo.
+			Opulent staat voor een tijdloos en weelderig interieur, in de breedste zin van het woord. Een weelde aan texturen, materialen, licht, kleuren. 
+			Een interieur dat vreugde teweeg brengt en waarin je elke dag inspiratie kan opdoen. Wooninterieur, 
+			kantoorinrichting of horeca, we durven het allemaal aan en halen samen met jou alles uit de kast om een spraakmakend interieur te realiseren.
 		</p>
-	</div>
-</section>
-
-<section style="background-image: url(/spacejoy.jpg);" class="py-32 bg-cover bg-center min-h-[60vh]">
-	<div class="sm:w-2/3 sm:ml-[10%] lg:ml-[60%] lg:w-1/4 inline-flex justify-center items-center relative">
 		
-		<p class="text-white z-10 absolute p-16 px-24">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque dolorem dolores enim ex exercitationem hic
-			iusto magnam nam, officia sed! Aliquam at debitis deserunt ducimus nesciunt possimus.
-		</p>
-		<img src="/blob.png" alt="blob" class="relative inset-0 z-0"/>
+		<a href="/about" class="inline-block text-primary underline font-semibold tracking-wide mt-5">Meer over ons <i class="fas fa-angle-right ml-1"></i></a>
 	</div>
 </section>
