--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,8 @@
 import Layout from "../layouts/Layout.astro";
 import Nav from "../components/Nav.astro";
 import About from "../components/About.astro";
-import Info from "../components/Info.astro";
+import Proces from "../components/Proces.astro";
+import Faq from "../components/Faq.astro";
 import Contact from "../components/Contact.astro";
 import Projects from "../components/Projects.vue";
 ---
@@ -14,7 +15,8 @@ import Projects from "../components/Projects.vue";
 	<main>
 		<Projects client:visible />
         <About />
-        <Info />
+        <Proces />
+        <Faq />
         <Contact />
 	</main>
     <footer>
