--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -8,7 +8,7 @@
 		<div class="flex flex-col sm:flex-row">
 			<div class="w-full sm:w-1/2 lg:pr-32">
 				<p class="text-white mb-8 mt-8">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus architecto asperiores aspernatur corporis delectus earum esse eum.  A accusamus architecto asperiores aspernatur corporis delectus earum esse eum.
+					Heeft Opulent je kunnen inspireren? Neem gerust vrijblijvend contact op en vertel ons wat we samen met jou zouden kunnen bereiken. We kijken al uit naar de kennismaking!
 				</p>
 				<ul class="flex space-x-6 ml-12">
 					<li>
