--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,10 +13,11 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
+		<script src="https://kit.fontawesome.com/03fca1712c.js" crossorigin="anonymous"></script>
 		<title>{title}</title>
 		<link rel="stylesheet" href="/main.css" />
 	</head>
-	<body>
+	<body class="flex flex-col min-h-screen">
 		<slot />
 	</body>
 </html>
