--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -32,36 +32,30 @@
 				<form class="lg:pl-24">
 					<div class="flex space-x-6">
 						<div class="w-1/2">
-							<label for="firstname" class="block text-white mb-1">Name</label>
+							<label for="firstname" class="block text-white mb-1">Voornaam</label>
 							<input id="firstname" name="firstname" type="text" class="bg-primary-light px-4 py-2 rounded w-full">
 						</div>
 						<div class="w-1/2">
-							<label for="surname" class="block text-white mb-1">Surname</label>
+							<label for="surname" class="block text-white mb-1">Naam</label>
 							<input id="surname" name="surname" type="text" class="bg-primary-light px-4 py-2 rounded w-full">
 						</div>
 					</div>
 					<div class="mt-6">
 						<div class="w-full">
-							<label for="email" class="block text-white mb-1">Email</label>
+							<label for="email" class="block text-white mb-1">E-mailadres</label>
 							<input id="email" name="email" type="text" class="bg-primary-light px-4 py-2 rounded w-full">
 						</div>
 					</div>
 					<div class="mt-6">
 						<div class="w-full">
-							<label for="message" class="block text-white mb-1">Your message</label>
+							<label for="message" class="block text-white mb-1">Uw bericht</label>
 							<textarea id="message" name="message" class="bg-primary-light px-4 py-2 rounded w-full" rows="4"></textarea>
 						</div>
 					</div>
 					<div class="mt-6">
-						<button class="font-semibold text-white bg-primary-light hover:bg-fuchsia hover:text-black rounded px-6 py-2 w-48">Send</button>
+						<button class="font-semibold text-white bg-primary-light hover:bg-fuchsia hover:text-black rounded px-6 py-2 w-48">Verzenden</button>
 					</div>
 				</form>
-			</div>
-		</div>
-		
-		<div class="flex mt-20">
-			<div class="ml-auto text-white text-right flex">
-				Opulent Co. 2023 All rights reserved. <img class="ml-4 w-8"  src="pearl.png" alt="logo pearl" />
 			</div>
 		</div>
 	</div>
