--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,5 +19,13 @@ const { title } = Astro.props;
 	</head>
 	<body class="flex flex-col min-h-screen">
 		<slot />
+	
+		<footer class="bg-primary">
+			<div class="flex py-10 container">
+				<div class="ml-auto text-white text-right flex items-center">
+					Opulent Co. 2023 All rights reserved. <img class="ml-4 w-8"  src="pearl.png" alt="logo pearl" />
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
