--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -7,17 +7,17 @@
 				</h2>
 			</div>
 			<div class="sm:w-3/4 ">
-				<ul>
-					<li class="mb-10">
-						<div class="mb-3 font-semibold">Is elk ontwerp uniek?</div>
+				<ul class="space-y-10">
+					<li>
+						<div class="mb-2 font-semibold">Is elk ontwerp uniek?</div>
 						<div>
 							Absoluut! We maken een analyse op basis van wensen en persoonlijkheid, en van daaruit bouwen we een ontwerp op. 
 							We houden rekening met de site, omgeving en de noden en wensen. 
 							Door rekening te houden met deze factoren zal elk ontwerp steeds volledig uniek zijn.
 						</div>
 					</li>
-					<li class="mb-10">
-						<div class="mb-3 font-semibold">Ben ik verplicht een bepaald proces volledig te volgen?</div>
+					<li >
+						<div class="mb-2 font-semibold">Ben ik verplicht een bepaald proces volledig te volgen?</div>
 						<div>
 							Helemaal niet. Er zijn zelfs veel verschillende mogelijkheden. In een eerste korte kennismaking (via mail of telefoon) 
 							leren we van elkaar wat je precies wilt en kunnen wij een voorstel op maat doen van een 
@@ -25,7 +25,7 @@
 						</div>
 					</li>
 					<li>
-						<div class="mb-3 font-semibold">Hoeveel kost een interieuradvies?</div>
+						<div class="mb-2 font-semibold">Hoeveel kost een interieuradvies?</div>
 						<div>
 							Het is werk dat niet te standaardiseren valt, en daardoor is dat voor een prijs ook zo. De omvang van het project, 
 							de verwachtingen, en de graad van begeleiding zijn allemaal van invloed op de prijs. 
@@ -35,7 +35,7 @@
 						</div>
 					</li>
 					<li>
-						<div class="mb-3 font-semibold">Hoeveel tijd neemt een project in van a tot z?</div>
+						<div class="mb-2 font-semibold">Hoeveel tijd neemt een project in van a tot z?</div>
 						<div>
 							Sterk vergelijkbaar met de prijs, is ook de timing zeer afhankelijk van de omvang, de verwachtingen en de graad 
 							van begeleiding in het proces. Daarbij komt ook de timing van leveranciers of partners die het geheel 
