--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const { title } = Astro.props;
 		<footer class="bg-primary">
 			<div class="flex py-10 container">
 				<div class="ml-auto text-white text-right flex items-center">
-					Opulent Co. 2023 All rights reserved. <img class="ml-4 w-8"  src="pearl.png" alt="logo pearl" />
+					Opulent Co. 2023 All rights reserved. <img class="ml-4 w-8"  src="/pearl.png" alt="logo pearl" />
 				</div>
 			</div>
 		</footer>
