--- a/src/components/NavDetail.astro
+++ b/src/components/NavDetail.astro
@@ -1,5 +1,5 @@
 
-<div class="bg-primary text-white py-4 sm:py-12">
+<div class="bg-primary text-white py-6">
 	<div class="container">
 		<i class="fas fa-arrow-left mr-2"></i> <a href="/">Terug naar home</a>
 	</div>
