Image slider op project pagina

--- a/src/components/NavDetail.astro
+++ b/src/components/NavDetail.astro
@@ -1,6 +1,6 @@
 
 <div class="bg-primary text-white py-6">
-	<div class="container">
-		<i class="fas fa-arrow-left mr-2"></i> <a href="/">Terug naar home</a>
+	<div class="container mx-auto">
+		<a href="/"><i class="fas fa-arrow-left mr-2"></i>  Terug naar home</a>
 	</div>
 </div>
