--- a/src/pages/projects/[pid].astro
+++ b/src/pages/projects/[pid].astro
@@ -1,28 +1,35 @@
 ﻿---
 import Layout from "../../layouts/Layout.astro";
 import NavDetail from "../../components/NavDetail.astro";
+import ImageSlider from '../../components/image-slider.vue';
 export async function getStaticPaths() {
     const pages = [
         {
             pid: 1,
-            title: "Project 1",
-            text: "Welcome to the Astro store!",
+            images: ["1.jpg", "2.jpg"],
+            title: "Loft hotel room",
+            text: "Er is geen beter gevoel dan uitrusten in een luxueuze ruimte in loft-stijl na een drukke dag in de stad. Dit concept brengt een ode aan natuurlijke materialen, in een interessant contrast met rijke, weelderige materialen. De loft hotelkamer ademt luxe (uit) met zijn travertin, kalksteen en blauwe marmer vloeren, muren en accenten. De grote raampartijen worden volledig benut door te werken met twee niveaus voor slapen en baden. Op deze manier kan het uitzicht bewonderd worden vanuit elk niveau van de kamer.",
         },
         {
             pid: 2,
-            title: "Project 2",
-            text: "We have lots of products for you",
+            images: ["1.jpg", "2.jpg"],
+            title: "Rooftop bar",
+            text: "De veelbelovende, bruisende stemming van een grote stad aan je voeten. Boven op een jong maar uitgesproken hotel hoort een Rooftop bar waar mensen over spreken. Voor het concept van KOI kozen we een eenvoudig maar zeer effectief kleurenpalet dat een mooi contrast vormt met de natuurlijke kleuren van de koivissen in de aquariums in de vloer en naast de bar. Bij Opulent geloven we sterk in het implementeren van een concept in elk aspect van het ontwerp. Van meubilair en verlichting tot decoratie zijn de verwijzingen naar het thema subtiel, of net het tegenovergestelde. Het leven is zoveel leuker met wat kleur!",
         }
     ];
-    return pages.map(({ pid, title, text }) => {
+    return pages.map(({ pid, title, text, images }) => {
         return {
             params: { pid },
-            props: { title, text },
+            props: { 
+                title, 
+                text, 
+                images: images.map(i => "/projects/" + pid + "/" + i)
+            },
         };
     });
 }
 
-const { title, text } = Astro.props;
+const { title, text, images } = Astro.props;
 ---
 
 <Layout title="Opulent - Over ons">
@@ -31,8 +38,17 @@ const { title, text } = Astro.props;
     </header>
     <main class="text-fuchsia-dark bg-fuchsia flex-grow">
 
-        <div class="container py-20">
-            Projectje {title}
+        <div class="container py-20 mx-auto">
+            <h1 class="text-fuchsia-dark font-heading text-5xl inline-block mb-10">
+                {title}
+            </h1>
+            <p>
+                {text}
+            </p>
+            
+            <div class="mt-10">
+                <ImageSlider client:visible images={images} />
+            </div>
         </div>
 
     </main>
