Added all content to CMS

--- a/public/main.css
+++ b/public/main.css
@@ -13,6 +13,15 @@
 }
 
 @layer base {
+    h2 {
+        /*font-size: 1.125rem !important;*/
+        /*line-height: 1.75rem !important;*/
+        /*margin-bottom: 0.5rem !important;*/
+        /*color: white !important;*/
+        /*font-weight: 400 !important;*/
+        /*margin-top: 1.5rem !important;*/
+    }
+    
     .carousel__pagination {
         position: absolute;
         bottom: 10px;
