--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,8 @@
 ﻿---
 import Layout from "../layouts/Layout.astro";
 import NavDetail from "../components/NavDetail.astro";
+import * as aboutPage from '/content/about.md';
+
 ---
 
 <Layout title="Opulent - Over ons">
@@ -9,25 +11,15 @@ import NavDetail from "../components/NavDetail.astro";
     </header>
     <main class="text-fuchsia-dark bg-fuchsia flex-grow">
 
-        <div class="container py-20 grid grid-cols-3 gap-10">
+        <div class="container  mx-auto py-20 grid grid-cols-3 gap-10">
             <div class="col-span-2">
-                <h1 class="font-heading text-3xl inline-block mb-10">About</h1>
-                <p class="mb-4 font-light">
-                    Opulent is interieur voor de durvers. Mag het eens wat meer zijn? Dan zit je hier goed.
-                </p>
-                <p class="mb-4 font-light">
-                    Opulent staat voor een tijdloos en weelderig interieur, in de breedste zin van het woord. Een weelde aan texturen, materialen, licht, kleuren. 
-                    Een interieur dat vreugde teweeg brengt en waarin je elke dag inspiratie kan opdoen. 
-                    Wooninterieur, kantoorinrichting of horeca, we durven het allemaal aan en halen samen met jou alles uit de kast om een spraakmakend interieur te realiseren.
-                </p>
-                
-                <p class=" font-light">
-                    We tonen graag aan dat esthetiek, functionaliteit en beleving perfect in harmonie kunnen uitgelijnd worden in een onvergetelijk interieur.
-                </p>
+                <h1 class="font-heading text-3xl inline-block mb-10">{aboutPage.frontmatter.title}</h1>
+                <div class="mb-4 font-light space-y-4" set:html={aboutPage.compiledContent()}></div>
+               
             </div>
 
             <div class="col-span-1">
-                <img src="/proces1.jpg" />
+                <img src={aboutPage.frontmatter.image} />
                 <p class="mt-2 text-sm">
                     Oscar Thewissen<br/>
                     Interieurontwerper en drijvende kracht achter Opulent.
