--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,12 +1,13 @@
+---
+import * as homePage from '/content/home.md';
+---
 <section class="py-32 bg-fuchsia bg-cover" id="about" style="background-image: url('/grote parel.png')" >
 	<div class="mx-auto container">
 		<h1 class="text-primary font-heading text-5xl inline-block mb-10">
 			Interior design <span class="font-body text-xl block text-right mt-5 sm:mt-2 font-regular">for the daring</span>
 		</h1>
-		<p class="w-full sm:w-1/2 text-primary leading-7">
-			Opulent staat voor een tijdloos en weelderig interieur, in de breedste zin van het woord. Een weelde aan texturen, materialen, licht, kleuren. 
-			Een interieur dat vreugde teweeg brengt en waarin je elke dag inspiratie kan opdoen. Wooninterieur, 
-			kantoorinrichting of horeca, we durven het allemaal aan en halen samen met jou alles uit de kast om een spraakmakend interieur te realiseren.
+		<p class="w-full sm:w-1/2 text-primary leading-7" set:html={homePage.frontmatter.about}>
+		
 		</p>
 		
 		<a href="/about" class="inline-block text-primary underline font-semibold tracking-wide mt-5">Meer over ons <i class="fas fa-angle-right ml-1"></i></a>
