--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,3 +1,6 @@
+---
+import ContactForm from "./contactform.vue";
+---
 <section class="py-32 bg-primary" id="contact">
 	<div class="mx-auto container">
 		<div class="text-center">
@@ -29,33 +32,7 @@
 				</ul>
 			</div>
 			<div class="w-full sm:w-1/2 mt-10 sm:mt-0">
-				<form class="lg:pl-24">
-					<div class="flex space-x-6">
-						<div class="w-1/2">
-							<label for="firstname" class="block text-white mb-1">Voornaam</label>
-							<input id="firstname" name="firstname" type="text" class="bg-primary-light px-4 py-2 rounded w-full">
-						</div>
-						<div class="w-1/2">
-							<label for="surname" class="block text-white mb-1">Naam</label>
-							<input id="surname" name="surname" type="text" class="bg-primary-light px-4 py-2 rounded w-full">
-						</div>
-					</div>
-					<div class="mt-6">
-						<div class="w-full">
-							<label for="email" class="block text-white mb-1">E-mailadres</label>
-							<input id="email" name="email" type="text" class="bg-primary-light px-4 py-2 rounded w-full">
-						</div>
-					</div>
-					<div class="mt-6">
-						<div class="w-full">
-							<label for="message" class="block text-white mb-1">Uw bericht</label>
-							<textarea id="message" name="message" class="bg-primary-light px-4 py-2 rounded w-full" rows="4"></textarea>
-						</div>
-					</div>
-					<div class="mt-6">
-						<button class="font-semibold text-white bg-primary-light hover:bg-fuchsia hover:text-black rounded px-6 py-2 w-48">Verzenden</button>
-					</div>
-				</form>
+				<ContactForm client:load />
 			</div>
 		</div>
 	</div>
