Changes requests Oscar

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,10 +1,10 @@
 ---
 import * as homePage from '/content/home.md';
 ---
-<section class="py-32 bg-fuchsia bg-cover" id="about" style="background-image: url('/grote parel.png')" >
+<section class="py-32 bg-fuchsia bg-cover bg-center" id="about" style="background-image: url('/grote parel.png')" >
 	<div class="mx-auto container">
 		<h1 class="text-primary font-heading text-5xl inline-block mb-10">
-			Interior design <span class="font-body text-xl block text-right mt-5 sm:mt-2 font-regular">for the daring</span>
+			Interior <span class="font-body block text-right mt-5 sm:mt-2 font-regular">for the daring</span>
 		</h1>
 		<p class="w-full sm:w-1/2 text-primary leading-7" set:html={homePage.frontmatter.about}>
 		
