--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -3,14 +3,12 @@ import ContactForm from "./contactform.vue";
 ---
 <section class="py-32 bg-primary" id="contact">
 	<div class="mx-auto container">
-		<div class="text-center">
-			<h2 class="text-white font-heading text-3xl inline-block mb-10">
-				Contact
-			</h2>
-		</div>
 		<div class="flex flex-col sm:flex-row">
 			<div class="w-full sm:w-1/2 lg:pr-32">
-				<p class="text-white mb-8 mt-8">
+				<h2 class="text-white font-heading text-3xl inline-block">
+					Contact
+				</h2>
+				<p class="text-white mb-8 mt-4">
 					Heeft Opulent je kunnen inspireren? Neem gerust vrijblijvend contact op en vertel ons wat we samen met jou zouden kunnen bereiken. We kijken al uit naar de kennismaking!
 				</p>
 				<ul class="flex space-x-6 ml-12">
