--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -1,7 +1,7 @@
 ---
 import * as homePage from '/content/home.md';
 ---
-<section class="py-32 bg-fuchsia-dark text-white" id="process">
+<section class="py-32 bg-fuchsia-dark text-white">
 	<div class="mx-auto container">
 		<div class="flex flex-col sm:flex-row">
 			<div class="sm:w-1/4">
