--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -23,10 +23,10 @@ const { frontmatter } = Astro.props;
 	<header>
 		<NavDetail />
 	</header>
-	<main class="text-fuchsia-dark bg-fuchsia flex-grow">
+	<main class="text-primary bg-primary-light flex-grow">
 
 		<div class="container py-20 mx-auto">
-			<h1 class="text-fuchsia-dark font-heading text-5xl inline-block mb-10">
+			<h1 class="text-white font-heading text-5xl inline-block mb-10">
 				{frontmatter.title}
 			</h1>
 			
