More changes and responsive

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -13,17 +13,17 @@ import ContactForm from "./contactform.vue";
 				</p>
 				<ul class="flex space-x-6 ml-12">
 					<li>
-						<a href="">
+						<a href="https://www.instagram.com/by.opulent/" target="_blank">
 							<img src="/instagram.png" alt="instagram" width="45" />
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="tel:0477 58 45 28">
 							<img src="/telefoon.png" alt="phone" width="45" />
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="mailto:oscar@opulent.studio">
 							<img src="/email.png" alt="e-mail" width="45" />
 						</a>
 					</li>
