--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,13 +12,13 @@ import * as aboutPage from '/content/about.md';
     <main class="text-fuchsia-dark bg-fuchsia flex-grow">
 
         <div class="container  mx-auto py-20 grid grid-cols-3 gap-10">
-            <div class="col-span-2">
+            <div class="col-span-3 sm:col-span-2">
                 <h1 class="font-heading text-3xl inline-block mb-10">{aboutPage.frontmatter.title}</h1>
                 <div class="mb-4 font-light space-y-4" set:html={aboutPage.compiledContent()}></div>
                
             </div>
 
-            <div class="col-span-1">
+            <div class="col-span-3 sm:col-span-1">
                 <img src={aboutPage.frontmatter.image} />
                 <p class="mt-2 text-sm">
                     Oscar Thewissen<br/>
