--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -8,7 +8,7 @@
 				<img src="/glow.png" class="sm:min-w-[150px] absolute opacity-50 -translate-y-2 sm:-translate-y-5"/>
 			</a>
 		</li>
-		<li><a href="#process">Proces</a></li>
+		<li><a href="#interieuradvies">Interieuradvies</a></li>
 		<li><a href="#contact">Contact</a></li>
 	</ul>
 </nav>
