--- a/src/pages/interieuradvies.astro
+++ b/src/pages/interieuradvies.astro
@@ -10,8 +10,8 @@ import * as processPage from '/content/process.md';
     </header>
     <main class="text-white bg-fuchsia-dark flex-grow">
 
-        <div class="container mx-auto py-20 grid grid-cols-4 gap-10">
-            <div class="col-span-4 sm:col-span-3">
+        <div class="container mx-auto py-20 grid grid-cols-3 gap-10">
+            <div class="col-span-3 sm:col-span-2">
                 <h1 class="font-heading text-3xl inline-block mb-10 text-white">{processPage.frontmatter.title}</h1>
                 
                 <div class="text-fuchsia font-light mb-20 prose prose-invert prose-headings:font-normal prose-headings:mb-2" set:html={processPage.compiledContent()}></div>
@@ -21,8 +21,10 @@ import * as processPage from '/content/process.md';
                 <img src={processPage.frontmatter.imagebottom} />
             </div>
             
-            <div class="col-span-4 sm:col-span-1">
-                <img src={processPage.frontmatter.imageleft} />
+            <div class="col-span-3 sm:col-span-1 space-y-5">
+                <img class="w-full" src={processPage.frontmatter.imageright1} />
+                <img class="w-full" src={processPage.frontmatter.imageright2} />
+                <img class="w-full" src={processPage.frontmatter.imageright3} />
             </div>
         </div>
        
