--- a/src/pages/interieuradvies.astro
+++ b/src/pages/interieuradvies.astro
@@ -4,7 +4,7 @@ import NavDetail from "../components/NavDetail.astro";
 import * as processPage from '/content/process.md';
 ---
 
-<Layout title="Opulent - Proces">
+<Layout title="Opulent - Interieuradvieus">
     <header>
         <NavDetail />
     </header>
