--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -10,7 +10,7 @@
 			</a>
 		</li>
 		<li><a href="#projects">Projecten</a></li>
-		<li><a href="/prijzen">Pijzen</a></li>
+		<li><a href="/prijzen">Prijzen</a></li>
 		<li><a href="#contact">Contact</a></li>
 	</ul>
 </nav>
