--- a/src/pages/prijzen.astro
+++ b/src/pages/prijzen.astro
@@ -14,7 +14,7 @@ import aboutPage from "*.md";
         <div class="container mx-auto py-20">
 
             <h1 class="font-heading text-secondary text-3xl inline-block mb-10">{page.frontmatter.title}</h1>
-            <div class="text-secondary font-light mb-20 prose prose-invert prose-headings:font-normal prose-headings:mb-2 prose-headings:text-secondary" set:html={page.compiledContent()}></div>
+            <div class="text-secondary font-light mb-20 prose prose-invert prose-headings:font-normal prose-headings:mb-2" set:html={page.compiledContent()}></div>
 
 
             <img src={page.frontmatter.image} class="w-1/2"/>
