--- a/src/pages/interieurstyling.astro
+++ b/src/pages/interieurstyling.astro
@@ -2,6 +2,9 @@
 import Layout from "../layouts/Layout.astro";
 import NavDetail from "../components/NavDetail.astro";
 import * as page from '/content/interieurstyling.md';
+import Projects from "../components/Projects.vue";
+
+const projects = (await Astro.glob('../pages/projects/*.md')).filter(p => p.frontmatter.page_to_show_on === "interieurstyling");
 ---
 
 <Layout title="Opulent - Interieuradvieus">
@@ -20,6 +23,9 @@ import * as page from '/content/interieurstyling.md';
                 
                 <img src={page.frontmatter.imagebottom} />
             </div>
+
+
+            <Projects  projects={projects} client:only />
         </div>
        
     </main>
